<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context="com.xtagwgj.app.ui.user.ForgetPasswordActivity">

    <com.xtagwgj.common.commonwidget.NormalTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/font_normal2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_verifyCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:hint="@string/prompt_verify_code"
            android:inputType="number"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_normal2" />

        <Button
            android:id="@+id/bt_get_verify"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/get_verify_code"
            android:textColor="@color/colorFontWhite"
            android:textSize="@dimen/font_size_button" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:hint="@string/prompt_new_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/font_normal2" />

    <EditText
        android:id="@+id/et_rePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:hint="@string/prompt_re_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/font_normal2" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/colorFontWhite"
        android:textSize="@dimen/font_size_button" />

</LinearLayout>
